feat: load projects from server, load filters, search by query

--- a/src/assets/general.css
+++ b/src/assets/general.css
@@ -321,3 +321,8 @@ label.requered::after {
 .bottom-border-cyan {
     border-bottom: 0.1rem solid var(--cyan-color);
 }
+
+.ratio-16-9 {
+    aspect-ratio: 16/9;
+    object-fit:cover;
+}
